<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>qendpoint-core</artifactId>
    <version>1.9.0</version>

    <packaging>jar</packaging>


    <name>qendpoint core</name>
    <description>RDF core of the qendpoint, fork of RDFHDT.</description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <groupId>com.the-qa-company</groupId>
        <artifactId>
            qendpoint-parent
        </artifactId>
        <version>1.9.0</version>
    </parent>

    <licenses>
        <license>
            <name>
                GNU Library or Lesser General Public License (LGPL) 3.0
            </name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
        </license>
    </licenses>

    <properties>
        <common_codec.version>1.15</common_codec.version>
        <json_simple.version>1.1.1</json_simple.version>
        <junit.version>4.13</junit.version>
        <lwjgl.version>3.3.1</lwjgl.version>
        <rdf4j.version>4.2.0</rdf4j.version>
        <spring.version>2.7.5</spring.version>

        <logback.version>1.2.9</logback.version>
        <slf4j.version>1.7.30</slf4j.version>

        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.21</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-sparqlbuilder</artifactId>
            <version>${rdf4j.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-query</artifactId>
            <version>${rdf4j.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-client</artifactId>
            <version>${rdf4j.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>pl.pragmatists</groupId>
            <artifactId>
                JUnitParams
            </artifactId>
            <version>1.1.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
            <version>
                1.6
            </version>
        </dependency>
        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.78</version>
        </dependency>
    </dependencies>
</project>